--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,10 @@
 <nav>
   <% if user_signed_in? %>
       Signed in as <%= current_user.email %>
+      <p><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></p>
   <% else %>
       <%= link_to "Sign up", new_user_registration_path %>
+      <%= link_to 'Sign in', new_user_session_path %>
   <% end %>
 </nav>
 <%= yield %>
