--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,1 +1,6 @@
-<%= link_to 'New List', new_list_path %>
+<%= link_to 'New List ', new_list_path %>
+
+<p><% @lists.each do |list| %>
+    <p> <%= list.name %> </p>
+<% end %>
+</p>
