fixed and added a few navigaiton links

--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -4,7 +4,7 @@
 <p></p>
 <%= @item.tag %>
 <p></p>
-<%= @item.image %>
-
+<img src ='<%= @item.image %>' >
+<p></p>
 <%= link_to "Back to list", list_path(@item.list_id) %>
 
