--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -6,5 +6,9 @@
 <p></p>
 <img src ='<%= @item.image %>' >
 <p></p>
+<%= link_to 'Delete Item', [@list, @item],
+            :method => :delete,
+            :confirm => 'Are you sure you want to delete this project?' %>
+<p></p>
 <%= link_to "Back to list", list_path(@item.list_id) %>
 
