--- a/app/views/items/edit.html.erb
+++ b/app/views/items/edit.html.erb
@@ -1,4 +1,7 @@
 <h2>Edit Item</h2>
 <%= render 'form' %>
 
-<div>link_to "Delete This Item", </div>
+<div><%= link_to "Delete This Item", list_path(@item),
+  :method => :delete,
+  :confirm => 'Are you sure you want to delete this item?' %>
+</div>
