--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,7 +8,7 @@
 <p></p>
 <%= link_to 'Delete Item', [@list, @item],
             :method => :delete,
-            :confirm => 'Are you sure you want to delete this project?' %>
+            :confirm => 'Are you sure you want to delete this item?' %>
 <p></p>
 <%= link_to "Back to list", list_path(@item.list_id) %>
 
