--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,4 +1,4 @@
-<h2><%=@list.name%></h2>
+<h2><%= link_to @list.name, edit_list_path(@list) %></h2>
 <% @list.items.each do |item| %>
    <p><%= link_to item.name, [@list, item] %></p>
 <% end %>
