--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -9,8 +9,6 @@
       <%=	 f.text_field :category %>
     </p>
 
-
-
     <p>
       <%=	 f.label :status  %>
       <%=	 f.radio_button 'status', 'Yes', checked: true, id:'Active'%>Active
@@ -20,8 +18,8 @@
 
     <p>
       <%=	 f.label :publicity, "Make Public?" %>
-      <%=	 f.radio_button 'publicity',true, checked: true, id: 'Yes' %>Yes
-      <%=	 f.radio_button 'publicity',false, checked: false, id: 'No' %>No
+      <%=	 f.radio_button :publicity, checked: true, :checked => true %>Yes
+      <%=	 f.radio_button :publicity, checked: false %>No
 
     </p>
 <%=	 f.submit %>
