--- a/app/views/lists/_form.html.erb
+++ b/app/views/lists/_form.html.erb
@@ -18,8 +18,8 @@
 
     <p>
       <%=	 f.label :publicity, "Make Public?" %>
-      <%=	 f.radio_button('publicity', 'true', checked: true) %>Yes
-      <%=	 f.radio_button('publicity', 'false') %>No
+      <%=	 f.radio_button('publicity', 'true', checked: true, id: 'Yes') %>Yes
+      <%=	 f.radio_button('publicity', 'false', id: 'No') %>No
 
     </p>
 <%=	 f.submit %>
