--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-  <title>Shoppinglist</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title><%= content_for?(:title) ? yield(:title) : "Myapp" %></title>
+  <meta name="description" content="">
+  <meta name="author" content="">
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  
+  <%= yield(:head) %>
 </head>
 <body>
-<% flash.each do |key, value| %>
-    <div class='flash' id='<%= key %>'>
-      <%= value %>
+<header class="navbar navbar-fixed-top">
+  <nav class="navbar-inner">
+    <div class="container">
+      <%= render 'layouts/navigation' %>
     </div>
-<% end %>
-<nav>
-  <% if user_signed_in? %>
-      Signed in as <%= current_user.email %>
-      <p><%= link_to 'Sign Out', destroy_user_session_path, :method => :delete %></p>
-  <% else %>
-      <%= link_to "Sign up", new_user_registration_path %>
-      <p></p>
-      <%= link_to 'Sign in', new_user_session_path %>
-  <% end %>
-</nav>
-<%= yield %>
-
-
+  </nav>
+</header>
+<div id="main" role="main">
+  <div class="container">
+    <div class="content">
+      <div class="row">
+        <div class="span12">
+          <%= render 'layouts/messages' %>
+          <%= yield %>
+        </div>
+      </div>
+      <footer>
+      </footer>
+    </div>
+  </div> <!--! end of .container -->
+</div> <!--! end of #main -->
 </body>
 </html>
