--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -18,4 +18,10 @@
         <%= link_to('Sign up', new_user_registration_path)  %>
       </li>
   <% end %>
+
+  <% if user_signed_in? %>
+      <li>
+        <%= link_to('My Lists', lists_path) %>
+      </li>
+  <% end %>
 </ul>
