moved Add List link to nav bar

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -23,5 +23,8 @@
       <li>
         <%= link_to('My Lists', lists_path) %>
       </li>
+      <li>
+        <%= link_to('New List ', new_list_path) %>
+      </li>
   <% end %>
 </ul>
