--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,14 @@
   <div class="container">
     <div class="content">
       <div class="row">
-        <div class="span12">
+        <div class="span3">
           <%= render 'layouts/messages' %>
           <%= yield %>
+        </div>
+      </div>
+      <div class="row">
+        <div class="span9 offset1">
+
         </div>
       </div>
       <footer>
