--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,5 +1,7 @@
 
-
+<div class="span3">
+  <h4><%= current_user.email %>'s Lists</h4>
+</div>
 <p><% @lists.each do |list| %>
     <p> <%= link_to list.name, list %> </p>
 <% end %>
